form in progress

--- a/db/cms_fixtures/localhost/pages/index/content.html
+++ b/db/cms_fixtures/localhost/pages/index/content.html
@@ -11,5 +11,8 @@
       <a href="http://google.com" class="button inactive">Nie, dziękuje</a> 
     </div>
   </div>
+  <div class="clear"></div>
 </div>
 {{ cms:snippet:form }}
+<div class="clear"></div>
+{{ cms:snippet:social}}
