added last page

--- a/db/cms_fixtures/localhost/pages/index/content.html
+++ b/db/cms_fixtures/localhost/pages/index/content.html
@@ -1,6 +1,11 @@
 <div id="page">
   <div class="cream">
-    <h3>Oat cake pudding dessert cupcake toffee.</h3> Lollipop powder fruitcake dessert. Liquorice liquorice icing pie dragée dessert toffee ice cream. Chocolate cake donut sweet. Caramels cookie cheesecake carrot cake caramels wypas soufflé cheesecake. <span class="blue">Apple pie sweet sweet roll tiramisu lemon drops toffee. Biscuit pudding muffin sesame snaps gummi bears bonbon gingerbread. Jelly beans brownie pastry cupcake bonbon chocolate candy. Pudding icing cupcake liquorice jelly</span><h3>Tootsie roll gummies faworki lemon drops jelly beans jelly-o jelly-o chocolate.</h3> Topping lemon drops oat cake carrot cake gingerbread tiramisu <span class="blue">gummi bears jelly</span> beans liquorice. Chocolate cake pudding brownie donut pie jelly-o sweet pie. Gingerbread applicake toffee tart candy jelly beans.
+    <h3>Cześć! Czy wiesz że...</h3>
+    jeśli mieszkasz w innej gminie niż  jesteś zameldowany to masz wybór <span class="blue">i możesz zdecydować gdzie wysłać część swojego podatku </span>  (prawie 40% !), który płacisz co roku składając rozliczenie PIT...?
+    <h3>A jest nas wielu</h3>
+    Szacujemy, że podatki od  20 000 osób  czyli  ok. <span class="blue">4mld zł</span> to wartość, która może trafiać do różnych gmin. Decydując komu chcemy przekazać pieniądz możemy mieć wpływ na...
+    <h3>Niebawem powstanie<br/> internetowy serwis GMIN PULS</h3>
+    <span class="blue"> pomoże ci zdecydować gdzie zainwestować Twoje podatki.</span> Będziesz miał możliwość sprawdzenia co gminy zrobiłyby z zeszłorocznymi podatkami i jak zamierzają wydać tegoroczny budżet. Będziesz mógł porównać i wybrać, która gmina proponuje lepszy program. 
   </div>
   <div class="arrow arrow-right">&nbsp;</div>
   <div class="action">
