--- a/db/cms_fixtures/localhost/snippets/form/content.html
+++ b/db/cms_fixtures/localhost/snippets/form/content.html
@@ -6,8 +6,8 @@
     <div class="arrow arrow-top">&nbsp</div> 
     <form action="/interests" method="post" data-remote="true">
        <h3>Powiedz nam proszę, które gminy Cię interesują</h3>
-       <input type="text" required name="interests[zamieszkania]"  placeholder="gmina zamieszkania"/>
-       <input type="text" required name="interests[zameldowania]" placeholder="gmina zameldowania"/>
+       <input type="text" required name="interest[zamieszkanie]"  placeholder="gmina zamieszkania"/>
+       <input type="text" required name="interest[zameldowanie]" placeholder="gmina zameldowania"/>
        <input type="submit" name="submit" class="button active" value="Wysyłam"/>
     </form>
   </div>
@@ -21,7 +21,7 @@
     <div class="arrow arrow-top">&nbsp</div> 
     <form action="/interests" method="post" data-remote="true">
        <h3>Czy chesz być poinformowany o rozwinieńciu tego projektu?</h3>
-       <input type="email" required name="interests[email]"  placeholder="wpisz swój e-mail"/>  
+       <input type="email" required name="interest[email]"  placeholder="wpisz swój e-mail"/>  
        <input type="submit" name="submit" class="button active" value="Tak, powiadom mnie"/>
     </form>
   </div>
