--- a/db/cms_fixtures/localhost/snippets/form/content.html
+++ b/db/cms_fixtures/localhost/snippets/form/content.html
@@ -4,7 +4,7 @@
       Super, bardzo się cieszymy że chcesz się przyłączyć do inicjatywy :-)!
     </h2> 
     <div class="arrow arrow-top">&nbsp</div> 
-    <form action="/interests" method="post" data-remote="true">
+    <form action="/interests" method="post" data-remote="true" id="ff">
        <h3>Powiedz nam proszę, które gminy Cię interesują</h3>
        <input type="text" required name="interest[zamieszkanie]"  placeholder="gmina zamieszkania"/>
        <input type="text" required name="interest[zameldowanie]" placeholder="gmina zameldowania"/>
@@ -19,7 +19,7 @@
       Ta informacja napewno pomoże lepiej przygotować dla Was serwis internetowy Gmin Puls.
     </h4>
     <div class="arrow arrow-top">&nbsp</div> 
-    <form action="/interests" method="post" data-remote="true">
+    <form action="/interests" method="put" data-remote="true" id="fs">
        <h3>Czy chesz być poinformowany o rozwinieńciu tego projektu?</h3>
        <input type="email" required name="interest[email]"  placeholder="wpisz swój e-mail"/>  
        <input type="submit" name="submit" class="button active" value="Tak, powiadom mnie"/>
