more changes to text

--- a/db/cms_fixtures/localhost/pages/index/content.html
+++ b/db/cms_fixtures/localhost/pages/index/content.html
@@ -5,19 +5,37 @@
     <h3>A jest nas wielu</h3>
     Szacujemy, że podatki od  20 000 osób  czyli  ok. <span class="blue">4mld zł</span> to wartość, która może trafiać do różnych gmin. Decydując komu chcemy przekazać pieniądz możemy mieć wpływ na...
     <h3>Niebawem powstanie<br/> internetowy serwis GMIN PULS</h3>
-    <span class="blue"> pomoże ci zdecydować gdzie zainwestować Twoje podatki.</span> Będziesz miał możliwość sprawdzenia co gminy zrobiłyby z zeszłorocznymi podatkami i jak zamierzają wydać tegoroczny budżet. Będziesz mógł porównać i wybrać, która gmina proponuje lepszy program. 
+    <span class="blue"> pomoże ci zdecydować gdzie zainwestować Twoje podatki.</span> Będziesz miał możliwość sprawdzenia co gminy zrobiłyby z zeszłorocznymi podatkami i jak zamierzają wydać tegoroczny budżet. Będziesz mógł porównać i wybrać, która gmina proponuje lepszy program.
+    <h4>przeczytaj więcej:</h4>
+    <p><a href="#">„Dlaczego gminy postanawiają walczyć o podatki?”</a></p>
+    <p><a href="#">„Dlaczego gminy postanawiają walczyć o podatki?”</a></p>
+    <p><a href="#">„Dlaczego gminy postanawiają walczyć o podatki?”</a></p>
   </div>
   <div class="arrow arrow-right">&nbsp;</div>
   <div class="action">
     <h2>Czas najwyższy na takie dziełanie! </h2>
     <h4>Czy ty też tak uważasz i byłbyś nim zainteresowany? </h4>
     <div class="actions">
-      <a href="#" id="formlink" class="button active">Tak, chcę</a>
-      <a href="http://google.com" class="button inactive">Nie, dziękuje</a> 
+      <a href="#" id="formlink" class="button active">Tak, chcę!</a>
+      <a href="http://google.com" class="button inactive nobutton">Nie, Dziękuje</a> 
+      <div class="clear"></div>
+    </div>
+    <div class="shy">
+      <div class="pinky-arrow">&nbsp;</div>
+      <div class="pinky">
+        <h3>Dziękujemy za Twoją opinie </h3>
+        <p>
+          Czy napewno uwazasz ze Twoja gmina wydaje w najlepszy sposób Twoje pieniadze?
+          Przeczytaj raz jeszcze przytoczone argumenty i artykuły prasowe i zastanow się.
+        </p>
+        <p>
+          Pamiętaj, że zawsze możesz wrócić i zagłosować ponownie!
+        </p>
+      </div>
     </div>
   </div>
   <div class="clear"></div>
 </div>
 {{ cms:snippet:form }}
 <div class="clear"></div>
-{{ cms:snippet:social}}
+
