new social links

--- a/db/cms_fixtures/localhost/snippets/social/content.html
+++ b/db/cms_fixtures/localhost/snippets/social/content.html
@@ -1,11 +1,14 @@
 <div id="socialbox">
-  <a href="http://twitter.com" target="_blank">
+  <a href="http://twitter.com" target="_blank" class="tbox">
     <img src="/assets/twitter.png" alt="twitter"/>
+    Udostępnij na Twitter
   </a>
-   <a href="http://facebook.com" target="_blank">
+   <a href="http://facebook.com" target="_blank" class="fbox">
     <img src="/assets/fb.png" alt="fb"/>
+     Udostępnij na Facebooku
   </a>
-   <a mailto="malpa@example.com">
+   <a mailto="malpa@example.com" class="ebox">
     <img src="/assets/email.png" alt="malpa@example.com"/>
+    Udostępnij przez maila
   </a>
 </div>
