--- a/db/cms_fixtures/localhost/pages/index/lastpage/content.html
+++ b/db/cms_fixtures/localhost/pages/index/lastpage/content.html
@@ -1,5 +1,5 @@
 <div id="lastpage">
-  <h2>
+  <h2 class="promise">
     Niebawem Cię poinformujemy jak rozwija się nasz serwis!
   </h2> 
   <div class="arrow arrow-top">&nbsp;</div>
@@ -10,10 +10,10 @@
   <h4>
     <span class="blue">Jest to bardzo ważne, aby było nas jak najwięcej.</span>
   </h4>
-   <h4>
+   <h5>
     Jeśli znasz innych, dla których ta inicjatywa
     może być ciekawa – poinformuj go o projekcie
-  </h4>
+  </h5>
   {{ cms:snippet:social}}
   <div class="clear"></div>
 </div>
