--- a/db/cms_fixtures/localhost/snippets/form/content.html
+++ b/db/cms_fixtures/localhost/snippets/form/content.html
@@ -21,7 +21,7 @@
       Ta informacja napewno pomoże lepiej przygotować dla Was serwis internetowy Gmin Puls.
     </h4>
     <div class="arrow arrow-top">&nbsp</div> 
-    <form action="/interests" method="put" data-remote="true" id="fs">
+    <form action="/interests" method="put" data-remote="true" id="fs" class="clearfix">
        <h3>Czy chesz być poinformowany o rozwinieńciu tego projektu?</h3>
        <input type="email" required name="interest[email]"  placeholder="wpisz swój e-mail"/>  
        <input type="submit" name="submit" class="button active" value="Tak, powiadom mnie"/>
