gmin plus fixes

--- a/db/cms_fixtures/localhost/snippets/form/content.html
+++ b/db/cms_fixtures/localhost/snippets/form/content.html
@@ -22,7 +22,7 @@
     </h4>
     <div class="arrow arrow-top">&nbsp</div> 
     <form action="/interests" method="put" data-remote="true" id="fs" class="clearfix">
-       <h3>Czy chesz być poinformowany o rozwinieńciu tego projektu?</h3>
+       <h3 class="bigger">Czy chesz być poinformowany o rozwinieńciu tego projektu?</h3>
        <input type="email" required name="interest[email]"  placeholder="wpisz swój e-mail"/>  
        <input type="submit" name="submit" class="button active" value="Tak, powiadom mnie"/>
     </form>
