--- a/db/cms_fixtures/localhost/snippets/form/content.html
+++ b/db/cms_fixtures/localhost/snippets/form/content.html
@@ -8,8 +8,10 @@
     <form action="/interests" method="post" 
           class="clearfix" data-remote="true" id="ff">
        <h3>Powiedz nam proszę, które gminy Cię interesują</h3>
-       <input type="text" required name="interest[zamieszkanie]"  placeholder="gmina zamieszkania"/>
-       <input type="text" required name="interest[zameldowanie]" placeholder="gmina zameldowania"/>
+       <input type="text" id="ac1" name="interest[zamieszkanie]"  placeholder="gmina zamieszkania" />
+       <input type="hidden" name="interest[zamieszkania_id]" id="ac1_b"/>
+       <input type="text" id="ac2" name="interest[zameldowanie]" placeholder="gmina zameldowania" />
+        <input type="hidden" name="interest[zameldowania_id]" id="ac2_b"/>
        <input type="submit" name="submit" class="button active" value="Wysyłam"/>
     </form>
   </div>
